SF Primes/src/objects/Clone_Records_Override_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The fields listed here will be over-ridden with the specified value when destination records are selected in the Clone Anything app.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Field_API_Name__c</fullName>
        <description>This is the Field API Name that is used to get the data from a Source or Destination sObject. For example, if overriding an Account field, the query would get the Account Id (Select Id From Account Where ...); the Query Field API Name would be &quot;Id&quot;.</description>
        <inlineHelpText>This is the Field API Name that is used to get the data from a Source or Destination sObject. For example, if overriding an Account field, the query would get the Account Id (Select Id From Account Where ...); the Query Field API Name would be &quot;Id&quot;.</inlineHelpText>
        <label>Query Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_sObject__c</fullName>
        <description>The Name of the queried sObject (for reference).</description>
        <inlineHelpText>The Name of the queried sObject (for reference).</inlineHelpText>
        <label>Query sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Replacement_Field__c</fullName>
        <label>Relationship Replacement Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Field_API_Name__c</fullName>
        <description>This is the Field API Name that determines where to put the value obtained from the query. For example, if a Task is cloned, and the Account is to be overridden, this field would contain either &quot;WhatId&quot; or &quot;WhoId&quot;.</description>
        <inlineHelpText>This is the Field API Name that determines where to put the value obtained from the query. For example, if a Task is cloned, and the Account is to be overridden, this field would contain either &quot;WhatId&quot; or &quot;WhoId&quot;.</inlineHelpText>
        <label>Replacement Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacewith_Sobject__c</fullName>
        <label>Replacewith Sobject</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the override value is coming from the Source Record instead of the Destination Record.</description>
        <inlineHelpText>Check this box if the override value is coming from the Source Record instead of the Destination Record.</inlineHelpText>
        <label>Use Source?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObject_API_Name__c</fullName>
        <description>This field is used to filter the settings and apply them to the object being cloned. For example, if the cloned sObject Type is Case, this field must also be Case so that the override settings are applied to Cases.</description>
        <inlineHelpText>This field is used to filter the settings and apply them to the object being cloned. For example, if the cloned sObject Type is Case, this field must also be Case so that the override settings are applied to Cases.</inlineHelpText>
        <label>sObject API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Clone Records Override Settings</label>
</CustomObject>